# oozedle

./: .gitignore  pyproject.toml
.github/: static.yml
.github/workflows/: static.yml
data/: Carmen Classic Stats.xlsx  PDQ Stats.xlsx  SBQ Stats.xlsx  Spartan Showdown Stats.xlsx
oozedle/: stats.py
output/: index.html
output/static/: main.js
scripts/: download_files.sh  setup_page.sh  setup_site.py
site/templates/: index.html  main.js  style.css
