[project]
name = "oozedle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
]

[tool.setuptools]
packages = ["oozedle"]

[tool.uv.sources]
oozedle = { workspace = true }
